Issue #SB-18683 fix: Resend otp and submit otp button text is not aligned properly in OTP page when user selects tamil language

--- a/src/app/client/src/app/modules/recover-account/components/verify-account-identifier/verify-account-identifier.component.scss
+++ b/src/app/client/src/app/modules/recover-account/components/verify-account-identifier/verify-account-identifier.component.scss
@@ -1,3 +1,8 @@
 @import "./variables";
 @import "./mixins/mixins";
 @import './components/recover-account';
+
+.content-align{
+    display: flex;
+    justify-content: center;
+}
